syntax = "proto3";
package lidofinance.interchainadapter.interchaintxs.v1;

option go_package = "github.com/lidofinance/interchain-adapter/x/interchaintxs/types";

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/api/http.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";

// Msg defines the Msg service.
service Msg {
  rpc RegisterInterchainAccount(MsgRegisterInterchainAccount)
      returns (MsgRegisterInterchainAccountResponse) {
    option (google.api.http) = {
      post : "/lidofinance/interchainadapter/interchaintxs/tx/v1/register/"
             "interchain/account"
      body : "*"
    };
  };
  rpc SubmitTx(MsgSubmitTx) returns (MsgSubmitTxResponse) {
    option (google.api.http) = {
      post : "/lidofinance/interchainadapter/interchaintxs/tx/v1/submit/tx"
      body : "*"
    };
  };
}

// MsgRegisterInterchainAccount is used to register an account on a remote zone.
message MsgRegisterInterchainAccount {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string from_address = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string connection_id = 2 [ (gogoproto.moretags) = "yaml:\"connection_id\"" ];
  string owner = 3 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
}

// MsgRegisterInterchainAccountResponse is the response type for
// MsgRegisterInterchainAccount.
message MsgRegisterInterchainAccountResponse {}

// MsgSubmitTx defines the payload for Msg/SubmitTx
message MsgSubmitTx {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string from_address = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  // Owner is supposed to be the unique identifier, e.g., lido/kava.
  // This identifier will be a part of the portID that we'll claim our
  // capability for.
  string owner = 2;
  string connection_id = 3 [ (gogoproto.moretags) = "yaml:\"connection_id\"" ];
  repeated google.protobuf.Any msgs = 4;
}

// MsgSubmitTxResponse defines the response for Msg/SubmitTx
message MsgSubmitTxResponse {}